discussion/kv_engine/170521/170521_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Create json_validator library

This is currently a wrapper on top of JSON_checker,
and the main purpose of the library is to make it
easy to flip the underlying library without having
to manually update code in a lot of other locations
in order to flip the backend.

Change-Id: I527012ecccfe1cd43c0794361b159f0e7f3c7c29

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-11 13:44:14.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 13:46:46.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16368/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5199/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5199/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17594/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17289/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18327/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18327/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25694/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25694/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5260/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5260/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14393/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/json/syntax_validator.h b/json/syntax_validator.h
index 1fbdcdfe1..e2c85989f 100644
--- a/json/syntax_validator.h
+++ b/json/syntax_validator.h
@@ -34,5 +34,6 @@ public:
 
 } // namespace cb::json
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; t);
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; t);
 std::string to_string(const cb::json::SyntaxValidator::Type&amp; type);

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14393/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15551/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
    return cb::xattr::validate(*validator, view);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15551/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15551/ )
----------------------------------------------------------------------------------------------------------------------
